standalone-node/cluster_installers/extensions-templates/gatekeeper-np.yaml
# SPDX-FileCopyrightText: (C) 2024 Intel Corporation
# SPDX-License-Identifier: LicenseRef-Intel
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gatekeeper-labeler
  namespace: gatekeeper-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gatekeeper
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: gatekeeper
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: gatekeeper
