standalone-node/cluster_installers/extensions-templates/kube-metrics-np.yaml
# SPDX-FileCopyrightText: (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kubelet-metrics
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rke2-metrics-server
  policyTypes:
    - Egress
    - Ingress
  egress:
    - ports:
        - protocol: TCP
          port: 10250
  ingress: []
