standalone-node/cluster_installers/extensions-templates/kube-system-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kubesystem-egress
  namespace: kube-system
spec:
  egress:
  - {}
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubesystem-ingress
  namespace: kube-system
spec:
  ingress:
  - {}
  podSelector: {}
  policyTypes:
  - Ingress
